--- a/app/actor/seymour.css
+++ b/app/actor/seymour.css
@@ -8,7 +8,7 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-image: url(/secret/seymour-color-corrected.png);
+	background-image: url(/secret/super-seymour.png);
 	background-position: var(--sprite-offset-x) var(--sprite-offset-y);
 	height: 64px;
 	width: 64px;
