--- a/app/actor/seymour.css
+++ b/app/actor/seymour.css
@@ -8,7 +8,8 @@
 	position: absolute;
 	top: 0;
 	left: 0;
-	background-image: url(/secret/super-seymour.png);
+	/*background-image: url(/secret/super-seymour.png);*/
+	background-image: url(/secret/seymour-color-corrected.png);
 	background-position: var(--sprite-offset-x) var(--sprite-offset-y);
 	height: 64px;
 	width: 64px;
@@ -46,7 +47,7 @@
 
 }
 
-@-webkit-keyframes seymour-walk {
+@keyframes seymour-walk {
 	from{
 		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
 	}
@@ -55,7 +56,7 @@
 	}
 }
 
-@-webkit-keyframes seymour-run {
+@keyframes seymour-run {
 	from{
 		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
 	}
@@ -64,7 +65,7 @@
 	}
 }
 
-@-webkit-keyframes seymour-jump {
+@keyframes seymour-jump {
 	from{
 		background-position: var(--sprite-offset-x) var(--sprite-offset-y);
 	}
