--- a/app/backdrop/style.css
+++ b/app/backdrop/style.css
@@ -81,7 +81,7 @@
 .backdrop.industrial {
 	/*background-color: rgba(255,255,255,1);*/
 	/*background-color: #4848d8;*/
-	/*background-color: rgba(0,0,75,0.5);*/
+	background-color: rgba(95,60,70,1);
 }
 
 .backdrop.mystic-cave .parallax,
