--- a/app/ui/hud-frame.css
+++ b/app/ui/hud-frame.css
@@ -21,6 +21,21 @@
 	width: 240px;
 }
 
+.hud-top-left.hud-table,
+.hud-top-right.hud-table {
+	margin-top:  4em;
+}
+
+.hud-bottom-left.hud-table,
+.hud-top-left.hud-table {
+	margin-left:  1em;
+}
+
+.hud-bottom-right.hud-table,
+.hud-top-right.hud-table {
+	margin-right:  1em;
+}
+
 .hud-top-right {
 	display: block;
 	position: absolute;
