--- a/app/actor/monitor.css
+++ b/app/actor/monitor.css
@@ -101,7 +101,7 @@
 	--screen-y: 2;
 }
 
-[data-monitor="shield-stars"] .monitor-screen {
+[data-monitor="sheild-star"] .monitor-screen {
 	--screen-x: 0;
 	--screen-y: 3;
 }
